// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share bar component email icon when tokenising with loading state while network request is fetching data 1`] = `
<BarItem
  dataTestId="email-share"
  url=""
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
    style={
      Object {
        "borderBottomLeftRadius": "9999px",
        "borderBottomRightRadius": "9999px",
        "borderTopLeftRadius": "9999px",
        "borderTopRightRadius": "9999px",
        "height": "40px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "width": "40px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#1976D2",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#1976D2",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</BarItem>
`;

exports[`save and share bar component save and share bar renders correctly when logged in 1`] = `
<div
  className="css-view-1dbjc4n"
  data-testid="save-and-share-bar"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "justify",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "space-between",
      "alignItems": "center",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "justifyContent": "space-between",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPack": "justify",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "alignItems": "center",
        "flexDirection": "row",
        "height": "40px",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
      }
    }
  >
    <div
      className="css-text-901oao"
      style={
        Object {
          "WebkitTransform": "translateY(9%)",
          "color": "rgba(105,105,105,1.00)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "14px",
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
  <div
    className="css-view-1dbjc4n"
    data-testid="save-star"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "alignItems": "center",
        "flexDirection": "row",
        "height": "40px",
        "marginLeft": "auto",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
      }
    }
  >
    <div
      className="css-text-901oao"
      style={
        Object {
          "WebkitTransform": "translateY(9%)",
          "color": "rgba(105,105,105,1.00)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "14px",
          "lineHeight": "14px",
          "marginRight": "10px",
          "textAlign": "right",
          "transform": "translateY(9%)",
        }
      }
    >
      Save
    </div>
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "rgba(245,245,245,1.00)",
          "borderBottomLeftRadius": "9999px",
          "borderBottomRightRadius": "9999px",
          "borderTopLeftRadius": "9999px",
          "borderTopRightRadius": "9999px",
          "height": "40px",
          "marginLeft": "5px",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "width": "40px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
      >
        <svg
          height="100%"
          viewBox="0 0 32 32"
          width="100%"
        >
          <circle
            cx="16"
            cy="16"
            fill="none"
            r="14"
            strokeWidth="4"
            style={
              Object {
                "opacity": 0.2,
                "stroke": "#1976D2",
              }
            }
          />
          <circle
            cx="16"
            cy="16"
            fill="none"
            r="14"
            strokeWidth="4"
            style={
              Object {
                "stroke": "#1976D2",
                "strokeDasharray": 80,
                "strokeDashoffset": 60,
              }
            }
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`save and share bar component save and share bar renders correctly when not logged in 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy"
  data-testid="save-and-share-bar"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "justify",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "space-between",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "justifyContent": "space-between",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPack": "justify",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "flexDirection": "row",
        "height": "40px",
        "msFlexDirection": "row",
      }
    }
  >
    <div
      className="css-text-901oao"
      style={
        Object {
          "WebkitTransform": "translateY(9%)",
          "color": "rgba(105,105,105,1.00)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "14px",
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
</div>
`;
